--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,13 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
-  firebase_auth: ^1.4.1
-  firebase_core: ^1.3.0
+  # firebase_auth: ^1.4.1
+  # firebase_core: ^1.3.0
+  firebase_auth: ^3.3.5
+  firebase_core: ^1.5.0
   flutter_bloc: ^7.0.1
-  freezed_annotation: ^0.14.1
+  freezed_annotation: ^0.14.2
+  # freezed_annotation: ^0.14.1
   get_it: ^7.1.3
   injectable: ^1.4.1
   another_flushbar: ^1.10.22
@@ -53,16 +56,19 @@ dependencies:
   avatar_glow: ^2.0.2
   animate_icons: ^2.0.0
   flutter_speed_dial: ^4.0.0+1
+  auto_route: ^3.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.0.4
-  freezed: ^0.14.1
-  injectable_generator: ^1.4.0
+  freezed: ^0.14.2
+  injectable_generator: ^1.4.1
   lint: ^1.5.3
-  auto_route_generator: ^2.1.0
-  json_serializable: ^4.1.3
+  auto_route_generator: ^3.2.1
+  # auto_route_generator: ^3.2.1//^2.1.0
+  # json_serializable: ^4.1.3
+  json_serializable: ^6.1.3
   flutter_launcher_icons: ^0.9.2
 
 flutter_icons:
