--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,10 @@ dev_dependencies:
   freezed: ^0.14.1
   injectable_generator: ^1.4.0
   lint: ^1.5.3
-  auto_route_generator: ^2.1.0
-  json_serializable: ^4.1.3
+  # auto_route_generator: ^2.1.0
+  auto_route_generator: ^3.2.1
+  # json_serializable: ^4.1.3
+  json_serializable: ^6.1.3
   flutter_launcher_icons: ^0.9.2
 
 flutter_icons:
