--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dev_dependencies:
   # json_serializable: ^4.1.3
   json_serializable: ^6.1.3
   flutter_launcher_icons: ^0.9.2
+  android_intent_plus: ^3.1.1
 
 flutter_icons:
     android: true
