--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,56 +18,56 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
   flutter_localizations:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  dartz: ^0.10.0-nullsafety.2
-  firebase_auth: ^1.4.1
-  firebase_core: ^1.3.0
+  flutter:
+   sdk: flutter
+  another_flushbar: ^1.10.28
+  auto_route: ^3.2.4
+  cloud_firestore: ^3.1.13
+  connectivity_plus: ^2.2.1
+  dartz: ^0.10.1
+  firebase_auth: ^3.3.15
+  firebase_core: ^1.15.0
   flutter_bloc: ^8.0.1
-  freezed_annotation: ^0.14.1
-  get_it: ^7.1.3
-  injectable: ^1.4.1
-  another_flushbar: ^1.10.22
+  flutter_switch: ^0.3.2
+  font_awesome_flutter: ^10.1.0
+  freezed_annotation: ^1.1.0
+  get_it: ^7.2.0
+  http: ^0.13.4
+  injectable: ^1.5.3
   intl: ^0.17.0
-  qr_code_scanner: ^0.4.0
+  json_annotation: ^4.4.0
+  kt_dart: ^0.10.0
   qr_flutter: ^4.0.0
-  http: ^0.13.3
-  wordpress_api: ^1.2.0
-  flutter_html: ^2.1.5
-  url_launcher: ^6.0.0
-  font_awesome_flutter: ^9.2.0
-  cloud_firestore: ^2.2.0
-  uuid: ^3.0.5
-  kt_dart: ^0.9.1
-  rxdart: ^0.27.1
-  image_picker: ^0.8.4+1
-  external_app_launcher: ^2.0.2
-  json_annotation: ^4.0.1
-  flutter_countdown_timer: ^4.1.0
-  shared_preferences: ^2.0.0
-  connectivity_plus: ^2.0.2
+  qr_code_scanner: ^0.7.0
+  rxdart: ^0.27.3
+  shared_preferences: ^2.0.13
+  # upgrader: ^4.2.0
+  url_launcher: ^6.0.20
   avatar_glow: ^2.0.2
   animate_icons: ^2.0.0
   flutter_speed_dial: ^4.0.0+1
   flutter_circular_text: ^0.3.1
+  wordpress_api: ^1.2.0
+  flutter_html: ^2.1.5
+  image_picker: ^0.8.4+1
+  external_app_launcher: ^2.0.2
+  uuid: ^3.0.6
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  build_runner: ^2.0.4
-  freezed: ^0.14.1
-  injectable_generator: ^1.4.0
-  lint: ^1.5.3
-  # auto_route_generator: ^2.1.0
-  auto_route_generator: ^3.2.1
-  # json_serializable: ^4.1.3
-  json_serializable: ^6.1.3
-  flutter_launcher_icons: ^0.9.2
-  android_intent_plus: ^3.1.1
+ auto_route_generator: ^3.2.3
+ build_runner:
+ flutter_test:
+   sdk: flutter
+ freezed: ^1.1.1
+ injectable_generator: ^1.5.3
+ json_serializable: ^6.1.5
+ lint: ^1.5.3
 
 flutter_icons:
     android: true
