--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dev_dependencies:
 
 flutter_icons:
     android: true
+    ios: true
     image_path: "assets/icon/icon.png"
     adaptive_icon_background: "#ffffff"
     adaptive_icon_foreground: "assets/icon/ic_villa.png"
