--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   external_app_launcher: ^2.0.2
   uuid: ^3.0.6
   cupertino_icons: ^1.0.2
+  firebase_messaging: ^11.4.1
+  overlay_support: ^2.0.1
 
 dev_dependencies:
  auto_route_generator: ^3.2.3
