--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_messaging: ^11.4.1
   overlay_support: ^2.0.1
+  cloud_functions: ^3.2.16
+  flutter_local_notifications: ^9.4.1
 
 dev_dependencies:
  auto_route_generator: ^3.2.3
