--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         android:label="Villa Ritter"
         android:icon="@mipmap/ic_launcher"> 
         android:usesCleartextTraffic="true"
+        <meta-data
+          android:name="com.google.firebase.messaging.default_notification_icon"
+          android:resource="@mipmap/ic_launcher.png" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
